# cmake_tutorial

Tutorials/1-CMake-stages/: CMakeLists.txt
Tutorials/4-Version-and-policies/4.1-cmake-minimum-required/: CMakeLists.txt
Tutorials/4-Version-and-policies/4.2-CMake-policies/: CMakeLists.txt
Tutorials/4-Version-and-policies/4.3-Keep-using-old/: CMakeLists.txt  foo.cpp
Tutorials/5-project-declaration/5.1-Tool-discovering/: CMakeLists.txt
Tutorials/5-project-declaration/5.2-Languages/: CMakeLists.txt
Tutorials/5-project-declaration/5.3-Variables/: CMakeLists.txt  CMakeLists0.txt  foo.cpp
Tutorials/5-project-declaration/5.3-Variables/boo/: CMakeLists.txt  boo.cpp
Tutorials/5-project-declaration/5.4-When-not-declared/: CMakeLists.txt
Tutorials/5-project-declaration/5.4-When-not-declared/boo/: CMakeLists.txt  boo.hpp
Tutorials/5-project-declaration/5.4-When-not-declared/builds/: CMakeCache.txt  Makefile  cmake_install.cmake
Tutorials/5-project-declaration/5.4-When-not-declared/builds/boo/: Makefile  cmake_install.cmake
Tutorials/6-Variables/1-Regular-variables/: CMakeLists.txt  modify-abc.cmake
Tutorials/6-Variables/1-Regular-variables/boo/: CMakeLists.txt
Tutorials/6-Variables/1-Regular-variables/builds/: CMakeCache.txt  Makefile  cmake_install.cmake
Tutorials/6-Variables/2-Cache-variables/: CMakeLists.txt
Tutorials/6-Variables/2-Cache-variables/boo/: CMakeLists.txt
Tutorials/6-Variables/2-Cache-variables/builds/: CMakeCache.txt  Makefile  cmake_install.cmake
Tutorials/6-Variables/2-Cache-variables/initial-cache/: cache.cmake
Tutorials/6-Variables/3-Environment-variables/: CMakeLists.txt  level1.cmake  level2.cmake  script.cmake
Tutorials/6-Variables/3-Environment-variables/_builds/: 123-tgt  CMakeCache.txt  Makefile  cmake_install.cmake
minimal-example/: CMakeLists.txt
minimal-example/builds/: CMakeCache.txt  Makefile  cmake_install.cmake
